--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "hassan1400938/github.io/MyDigitalBusinessCard/",
+  "homepage": "https://hassan1400938.github.io/MyDigitalBusinessCard/",
   "name": "waqar-muhammad",
   "private": true,
   "version": "0.0.0",
