--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "homepage": "https://hassan1400938.github.io/my-digital-business-card/",
-  "name": "waqar-muhammad",
+  "name": "waqar-businesscard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
